# test2

./: .gitignore  README.md  requirements.txt
configs/: benchmark_component_ablation.yaml  benchmark_thesis.yaml  benchmark_thesis_directml.yaml  default.yaml  detection.yaml  inference.yaml  paths.yaml  rl.yaml
method/anchor_zoom_rl/: README.md  pyproject.toml  requirements.txt
method/anchor_zoom_rl/anchor_zoom_rl/: __init__.py  config.py
method/anchor_zoom_rl/anchor_zoom_rl/core/: __init__.py  anchors.py  geometry.py  hard_regions.py  postprocess.py  reward.py  state.py  types.py
method/anchor_zoom_rl/anchor_zoom_rl/rl/: agent.py  network.py  replay.py
method/anchor_zoom_rl/anchor_zoom_rl/runtime/: __init__.py  cache.py  data.py  detector.py  environment.py  inferencer.py  io.py  metrics.py  prediction.py  trainer.py
method/anchor_zoom_rl/configs/: default.yaml
method/anchor_zoom_rl/scripts/: evaluate.py  infer.py  precompute.py  smoke_test.py  train.py
method/anchor_zoom_rl/tests/: conftest.py  test_agent.py  test_anchors.py  test_environment.py  test_hard_regions.py  test_inference_smoke.py  test_postprocess_metrics.py  test_replay.py  test_reward.py  test_sampling.py  test_training_smoke.py
scripts/: audit_splits.py  benchmark.py  build_ablation_table.py  build_benchmark_tables.py  build_collab_dataset.py  export_onnx.py  hard_region.py  infer.py  oracle_analysis.py  run_ablation.py  run_component_ablation.py  train.py  visualize.py
tests/: check_caches.py  test_benchmark_batch.py  test_benchmark_sampling.py  test_collab_dataset.py  test_label.py  (+8 more)
(+96 files in other folders)
