[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor-zoom-rl"
version = "0.1.0"
description = "Independent anchor-conditioned sequential RL for adaptive sliced detection"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python",
  "PyYAML",
  "torch",
  "ultralytics",
]

[tool.setuptools.packages.find]
include = ["anchor_zoom_rl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
